overflow:auto problem solved -> declare main width

--- a/static/css/user.css
+++ b/static/css/user.css
@@ -4,9 +4,17 @@ html, body {
 	padding: 0;
 }
 #wrapper {
-	min-height: 100%
+	min-height: 100%;
+	width: 500px;
 	margin: 0 auto;
 }
+#main {
+	overflow: auto;
+	width: 500px;
+	margin: 0 auto;
+	padding-bottom: 20px;
+}
+	
 #infobar {
 	width: 100%;
 	overflow: auto;
